Optimized page load up from drawer and fixed drawer on mobile view (#56)
* added client edit profile page

* fixed signin issue

* init commit

* fixed build

* build fix added

* redirect to projects page

* more bug fixes

* fixed milestone submission

* merged fix

* use wallet account everywhere

* remove unused references

* refactor

* truncate address

* clean up

* resposinve login, client view and freelancer view dashboard

* conflict fix

* initial message page responsive

* fixed chat list scroll bug

* Mobile responsive dashboard and freelancer profile page

* optimized navigation speed and fixed drawer issue on mobile

* fixed conflicts

---------

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -310,6 +310,7 @@ div#layout {
 	transition: transform 200ms cubic-bezier(1, 0, 0, 1);
 	transition: all 200ms ease-in-out;
 	cursor: pointer;
+	-webkit-tap-highlight-color: transparent;
 }
 
 #left-drawer.open,
